<resources>

    <string name="app_name">Football Contest Creator</string>
    <string name="app_name_short">F.C.C.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tournaments">Tournaments</string>
    <string name="teams">Teams</string>
    <string name="sign_in_out">Sign In / Out</string>

    <string name="stats">Stats</string>
    <string name="table">Table</string>
    <string name="results">Results</string>
    <string name="matches">Matches</string>
    <string name="comments">Comments</string>

    <string name="action_filter">Filter</string>

    <string name="default_username">No user is signed in</string>
    <string name="want_to_log_in">Are you already registered?</string>
    <string name="log_in">Log In</string>
    <string name="want_to_log_out">Do you want to log out?</string>
    <string name="log_out">Log Out</string>
    <string name="want_to_register">Do you want to create an account?</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>

    <string name="new_tournament">New Tournament</string>
    <string name="new_team">New Team</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="championship">Championship</string>
    <string name="elimination">Elimination (max. 2 rounds)</string>
    <string name="rounds">Rounds</string>

    <string name="place">#</string>
    <string name="team">Team</string>
    <string name="points">P</string>
    <string name="wins">W</string>
    <string name="draws">D</string>
    <string name="losses">L</string>
    <string name="goal_difference">GD</string>

    <string name="divider">-</string>
    <string name="match_details">Match Details</string>
    <string name="final_score">Final score</string>

    <string name="add_comments">Add Comments</string>

</resources>