<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TournamentActivity"
    tools:showIn="@layout/activity_shared">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:orientation="horizontal"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/place"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/team"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/points"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/wins"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/draws"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/losses"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/goal_difference"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ranking_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>